# ann-course-practice

./: .travis.yml  CMakeLists.txt  README.md
code/ann-library/src/: ANN.cpp  ANN.h  CMakeLists.txt
code/ann-library/tests/: ANN_test.cpp  CMakeLists.txt
code/lab1-mnist/src/: CMakeLists.txt  main.cpp
